--- a/Responsividade/React/TelaAdmReact.css
+++ b/Responsividade/React/TelaAdmReact.css
@@ -3,11 +3,6 @@ body {
     padding: 0;
 }
 
-header {
-    width: 100%;
-    height: 13vh;
-    background-color: #678371;
-}
 
 .ConteinerPrincipal {
     width: 100%;
@@ -39,6 +34,10 @@ header {
     margin-top: 20px;
 }
 
+.user-perfil{
+    width: 100px;
+}
+
 .painelfoto {
     flex-direction: column;
 }
@@ -50,7 +49,8 @@ header {
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    justify-content: space-between;
+    gap: 10px;
+
 }
 
 .container-mid {
@@ -128,6 +128,60 @@ img {
     margin-left: 20px;
 }
 
+
+.search-box-prod{
+    display: flex;
+    align-items: center;
+    background: var(--cor-1);
+    padding: 10px 20px;
+    border-radius: 50px;
+    height: 30px;
+    width: 240px;
+    transition: 0.5s;
+    margin: 5px;
+    margin-left: 30%;
+}
+
+
+
+
+
+
+.search-box-prod input{
+    padding: 6px;
+    background: transparent;
+    border: 0;
+    outline: 0;
+    color: var(--cor-2);
+    font-family: 18px;
+    max-width: 200px;
+    transition: 0.5s;
+}
+
+
+.dark .search-box-prod input{
+    padding: 6px;
+    background: transparent;
+    border: 0;
+    outline: 0;
+    color: var(--cor-2);
+    font-family: 18px;
+    max-width: 200px;
+    transition: 0.5s;
+}
+
+
+.search-box-prod input::placeholder{
+    color: var(--cor-2);
+}
+
+
+.search-box-prod img{
+    width: 20px;
+    cursor: pointer;
+}
+
+
 .input-adm-css,
 .button-prod-css {
     width: 93%;
@@ -203,7 +257,8 @@ img {
     }
 
     .movable-div {
-        height: auto;
+       
+        width: 0px;
     }
 
     .container-mid {
